labs/ubuntu-pod-nfs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ubuntu
spec: {}
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  namespace: ubuntu
spec:
  containers:
    - name: ubuntu-container
      image: ubuntu:latest
      command: ["/bin/bash", "-c", "sleep infinity"]
      volumeMounts:
        - name: ubuntu-volume
          mountPath: /home/
  volumes:
    - name: ubuntu-volume
      persistentVolumeClaim:
        claimName: ubuntu-pvc
  restartPolicy: OnFailure
