labs/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx-app
  type: ClusterIP
  # externalTrafficPolicy: Local
  # internalTrafficPolicy: Local
  # externalIPs:
  #   - 192.168.0.106
#    - 45.189.176.201
