labs/httproute-ddns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
  namespace: default
spec:
  parentRefs:
  - name: web # Refers to the Gateway named "web"
  hostnames:
  - "pow.ddns.net"
  rules:
  - backendRefs:
    - name: nginx
      port: 80
